--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>io.hypersistence</groupId>-->
+<!--            <artifactId>hypersistence-utils-hibernate-62</artifactId>-->
+<!--            <version>3.3.2</version>-->
+<!--        </dependency>-->
     </dependencies>
+
 
     <build>
         <plugins>
