--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/VGL
+spring.datasource.username=admina
+spring.datasource.password=Pass123
+spring.jpa.showSql=true
+spring.jpa.hibernate.ddlAuto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+server.error.include-message=always
